--- a/src/blocks/section-top/section-top__slider-points-block.css
+++ b/src/blocks/section-top/section-top__slider-points-block.css
@@ -1,6 +1,24 @@
 .section-top__slider-points-block {
   display: flex;
   gap: 30px;
+
+  /* transition: all 0.5s ease; */
+}
+
+@media (max-width: 900px) {
+  .section-top__slider-points-block {
+    position: absolute;
+    bottom: min(230px / 2, max(calc(100vh - 850px) / 2, 20px / 2));
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  /* .section-top_bg-slider .slick-dots {
+    z-index: 2;
+    bottom: 105px;
+    left: 50%;
+    transform: translateX(-50%);
+  } */
 }
 
 @media (max-width: 601px) {
