--- a/src/blocks/section-top/section-top_bg-track.css
+++ b/src/blocks/section-top/section-top_bg-track.css
@@ -10,9 +10,8 @@
   /* transform: translateX(-400vw); */
 
   display: flex;
-
   width: fit-content;
   height: 100%;
 
-  transition: transform 0.3s ease-in-out;
+  /* transition: transform 0.3s ease-in-out;  */
 }
