--- a/src/blocks/section-top/section-top__bb.css
+++ b/src/blocks/section-top/section-top__bb.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 80px;
+  margin-left: min(60px + 20px, max(24px + 20px, 5vw + 20px));
 }
 
 @media (max-width: 601px) {
