--- a/src/blocks/section-top/section-top__title-description.css
+++ b/src/blocks/section-top/section-top__title-description.css
@@ -3,7 +3,7 @@
 
   max-width: 460px;
   margin-bottom: 30px;
-  margin-left: 80px;
+  margin-left: min(60px + 20px, max(24px + 20px, 5vw + 20px));
 
   font-size: 24px;
   line-height: 140%;
@@ -14,10 +14,12 @@
 
   position: absolute;
   top: 17px;
-  left: -20px;
+  left: calc(
+    min(60px, max(30px, 5vw)) - min(60px + 20px, max(24px + 20px, 5vw + 20px))
+  );
   transform: translateX(-100%);
 
-  width: 60px;
+  width: min(60px, max(30px, 5vw));
   height: 1px;
 
   background-color: #fff;
