--- a/src/blocks/proposal/proposal__el-description.css
+++ b/src/blocks/proposal/proposal__el-description.css
@@ -2,7 +2,7 @@
   position: relative;
   max-width: 294px;
   margin-bottom: 46px;
-  margin-left: 60px;
+  margin-left: min(40px + 20px, max(24px + 20px, 5vw + 20px));
 }
 
 .proposal__el-description::before {
@@ -10,10 +10,12 @@
 
   position: absolute;
   top: 10px;
-  left: -20px;
+  left: calc(
+    min(40px, max(30px, 5vw)) - min(40px + 20px, max(24px + 20px, 5vw + 20px))
+  );
   transform: translateX(-100%);
 
-  width: 40px;
+  width: min(40px, max(20px, 5vw));
   height: 1px;
 
   background-color: #fff;
