--- a/src/blocks/title.css
+++ b/src/blocks/title.css
@@ -1,6 +1,6 @@
 .title {
   font-family: "SF Pro Display", sans-serif;
-  font-size: 60px;
+  font-size: min(60px, max(32px, 4.2vw));
   font-weight: 700;
   font-style: normal;
   line-height: 110%;
