--- a/src/blocks/reviews/reviews__content.css
+++ b/src/blocks/reviews/reviews__content.css
@@ -2,21 +2,34 @@
   position: relative;
 
   display: flex;
+  flex-shrink: 0;
+  gap: 20px;
   justify-content: space-between;
 
   margin-bottom: 90px;
   margin-left: calc(calc(100% - 1380px) / 2);
-  padding-top: 165px;
+
+  /* padding-top: 165px; */
   padding-left: 20px;
+}
+
+@media (max-width: 1440px) {
+  .reviews__content {
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 850px) {
+  .reviews__content {
+    flex-direction: column;
+    margin: 0 auto;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
 
 @media (max-width: 601px) {
   .reviews__content {
-    flex-direction: column;
-
     max-width: 340px;
-    margin: 0 auto;
-    padding-right: 20px;
-    padding-left: 20px;
   }
 }
