--- a/src/blocks/reviews/reviews__title-block.css
+++ b/src/blocks/reviews/reviews__title-block.css
@@ -1,9 +1,23 @@
 .reviews__title-block {
+  position: relative;
+
+  flex-shrink: 0;
+
+  width: 100%;
+  min-width: 350px;
   max-width: 550px;
+  padding-top: 165px;
+}
+
+@media (max-width: 1100px) and (min-width: 850px) {
+  .reviews__title-block {
+    max-width: calc(100vw - 550px);
+  }
 }
 
 @media (max-width: 601px) {
   .reviews__title-block {
+    min-width: 0;
     margin-bottom: 40px;
   }
 }
