--- a/src/blocks/cities/cities__container.css
+++ b/src/blocks/cities/cities__container.css
@@ -1,17 +1,15 @@
 .cities__container {
-  overflow: hidden;
+  /* overflow: hidden; */
 
   max-width: 1600px;
   height: min(900px, max(56.25vw));
   padding-top: 130px;
   padding-right: 118px;
 
-  background-image: linear-gradient(
-      270deg,
+  background-image: linear-gradient(270deg,
       rgb(31 31 31 / 90%) 1.97%,
       rgb(31 31 31 / 67%) 39.97%,
-      rgb(31 31 31 / 0%) 63.06%
-    ),
+      rgb(31 31 31 / 0%) 63.06%),
     url("@images/cities/cities_bg.jpg");
   background-repeat: no-repeat;
   background-position: 50% 0;
