--- a/src/blocks/cities/cities__el-title.css
+++ b/src/blocks/cities/cities__el-title.css
@@ -1,15 +1,16 @@
 .cities__el-title {
   display: block;
 
+  /* max-width: min-content; */
   margin-bottom: 8px;
 
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 700;
   line-height: 110%;
 }
 
 @media (max-width: 601px) {
   .cities__el-title {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
