--- a/src/blocks/business-model/business-model__title.css
+++ b/src/blocks/business-model/business-model__title.css
@@ -7,6 +7,7 @@
 
 .business-model__title-offset {
   display: block;
+  margin-right: -80px;
   margin-left: 80px;
 }
 
@@ -17,6 +18,7 @@
   }
 
   .business-model__title-offset {
-    margin-left: 26px;
+    margin-right: -20px;
+    margin-left: 26px
   }
 }
