--- a/src/blocks/cities/cities__el.css
+++ b/src/blocks/cities/cities__el.css
@@ -5,11 +5,11 @@
   justify-content: space-between;
 
   width: auto;
-  padding: 30px 40px;
+  padding: 25px 30px;
 
 
   background: #171818;
-  border-radius: 40px;
+  border-radius: 25px;
 
   transition: visibility 0.5s ease, opacity 0.5s ease;
 }
@@ -45,7 +45,8 @@
 
 
   .cities__el {
-    padding: 26px 20px;
+    gap: 10px;
+    padding: 20px 25px;
     border-radius: 20px;
   }
 }
