--- a/src/blocks/economy/economy__block-el.css
+++ b/src/blocks/economy/economy__block-el.css
@@ -1,5 +1,6 @@
 .economy__block-el {
   padding: 26px 30px;
+  padding-right: 20px;
 }
 
 .economy__block-el:nth-child(2) {
@@ -12,7 +13,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     padding: 16px 20px;
+    padding-right: 10px;
   }
 
   .economy__block-el:nth-child(1) {
