--- a/src/blocks/numbers/numbers.css
+++ b/src/blocks/numbers/numbers.css
@@ -18,8 +18,8 @@
     flex: auto;
 
     max-width: 690px;
-    padding-top: 34px;
-    padding-bottom: 50px;
+    padding-top: 35px;
+    padding-bottom: 46px;
     padding-left: 80px;
 }
 
@@ -68,6 +68,7 @@
 }
 
 .numbers__title--highlite {
+    margin-top: -0.2em;
     color: #0CDB92;
 }
 
@@ -75,6 +76,7 @@
     position: relative;
     flex: auto;
     padding: 40px 50px 50px;
+    background: #171818;
 }
 
 @media (max-width: 1340px) {
@@ -166,7 +168,7 @@
     gap: 18px;
     align-items: center;
 
-    margin-bottom: 30px;
+    margin-bottom: 6px;
 
     font-family: "SF Pro Display", sans-serif;
     font-size: 34px;
@@ -190,7 +192,7 @@
 .numbers__investment-list {
     display: flex;
     flex-direction: column;
-    gap: 34px;
+    gap: 20px;
     padding-left: 30px;
 
 }
@@ -225,12 +227,18 @@
     line-height: 100%;
 }
 
+
+
 .numbers__unit {
     font-size: 26px;
     font-weight: 300;
     font-style: normal;
     line-height: 150%;
     color: #828282;
+}
+
+.numbers__revenue .numbers__unit {
+    color: #fff;
 }
 
 .numbers__payback {
@@ -294,7 +302,7 @@
 
     .numbers__el-title {
         gap: 5px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         font-size: 18px;
     }
 
